@@ -12,6 +12,9 @@ For a complete change history, please see the Subversion log comments.
 Current Version (SVN trunk):
 ----------------------------
 
+- mapshape.c: Applied patch to make the location of tiled data relative to the
+  tileindex directory if SHAPEPATH is not set. (#2369)
+
 - maptemplate.c: Fixed issues in RFC 36 implementation that prevented mapscript 
   mapObj->processQueryTemplate() method from working.
 
